dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationContact__c.object
<CustomObject>
    <description>Technical object for storing the contact records which has been deletted and needs to be removed from OCTT.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IntegrationContact</label>
    <nameField>
        <label>IntegrationContactId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntegrationContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>